remove objective responsibilities and all references to them.  Sort consistency of redirects so that after saving an edit you're sent back to the referring page for keyResults, keyResultUpdates & deliverableUpdates

--- a/app/templates/add-team.hbs
+++ b/app/templates/add-team.hbs
@@ -20,7 +20,7 @@
         {{#if errors.shortCode}} <div class="col-sm-1 invalid" data-toggle="tooltip" {{bind-attr title="shortCodeErrors"}}></div> {{/if}}
       </div>
       <div class="form-group">
-        <label for="inputTechLead" class="col-sm-2 control-label">Tech Lead</label>
+        <label for="inputTechLead" class="col-sm-2 control-label">Technology Manager</label>
         <div class="col-sm-9">
           {{input class="form-control" id="inputTechLead" placeholder="Enter the name of the Technology Manager" value=techLead}}
         </div>
