--- a/app/templates/edit-deliverable.hbs
+++ b/app/templates/edit-deliverable.hbs
@@ -1,5 +1,6 @@
     <div class="panel-body">
-      <form class="form-horizontal" role="form">
+      <div class="alert alert-warning">If you want to provide an update on the status of a deliverable then please add a deliverable update - don't change the description here.</div>
+          <form class="form-horizontal" role="form">
         <div class="form-group">
           <label for="inputKeyResult" class="col-sm-2 control-label">Key Result</label>
           <div class="col-sm-9">
