--- a/app/templates/edit-key-result.hbs
+++ b/app/templates/edit-key-result.hbs
@@ -1,4 +1,5 @@
     <div class="panel-body">
+      <div class="alert alert-warning">If you want to provide an update on the status of a key result then please add a key result update - don't change the description here.</div>
       <form class="form-horizontal" role="form">
         <div class="form-group">
           <label for="inputCompanyGoal" class="col-sm-2 control-label">Company Goal</label>
