--- a/app/templates/key-result-update.hbs
+++ b/app/templates/key-result-update.hbs
@@ -5,7 +5,7 @@
   </div>
 
   <div class="panel-body">
-    <div class="alert alert-warning">All of the values below apart from the update date have been pre-populated with the values from the previous status update for reference. Please change them to the appropriate values for this update.</div>
+    <div class="alert alert-warning">Key Result Updates should be used by programme managers to update the rest of the organisation on the progress of an overall Key Result.  They can use the deliverable updates for all of the KR's deliverables, provided by technology managers, to guide them.<br>All of the values below apart from the update date have been pre-populated with the values from the previous status update for reference. Please change them to the appropriate values for this update.</div>
     <form class="form-horizontal" role="form">
       <div class="form-group">
         <label for="inputUpdateDate" class="col-sm-2 control-label">Update Date</label>
