--- a/app/templates/key-results.hbs
+++ b/app/templates/key-results.hbs
@@ -1,4 +1,3 @@
-<button type="button" class="btn btn-primary printHide" data-toggle="button" {{action 'toggleResponsible'}}>Show Responsibilities</button>
 <div class="spacer"></div>
 <table class="table table-striped table-bordered">
   <thead>
@@ -14,14 +13,6 @@
       <th class="col-sm-2">Commentary</th>
       <th class="printHide">Deliverables</th>
       <th class="printHide">Actions</th>
-      {{#if showResponsible}}
-        <th>Engineering</th>
-        <th>Product</th>
-        <th>Programme Manager</th>
-        <th>UX Design</th>
-        <th>UX Research</th>
-        <th>BI</th>
-      {{/if}}
     </tr>
   </thead>
   <tbody>
@@ -32,7 +23,7 @@
       <td>{{#link-to 'keyResult' session.organisation kr.quarter.id kr.id}}{{kr.name}}{{/link-to}}</td>
       <td class="printHide">
         {{#each oteam in kr.teams}}
-        {{#link-to 'teamDeliverables' session.organisation kr.quarter.id oteam.id}}{{oteam.shortCode}}&nbsp;{{/link-to}}
+        {{#link-to 'teamDeliverables' session.organisation kr.quarter.id oteam.id data-toggle="tooltip" title=oteam.techLead}}{{oteam.shortCode}}&nbsp;{{/link-to}}
         {{/each}}</td>
       <td {{bind-attr class="kr.ragColour"}}>{{kr.rag}}</td>
       <td>{{kr.completionHorizon}}</td>
@@ -43,21 +34,13 @@
       <td class="printHide"> 
         <div class="btn-group actionBtnGroup" role="group" aria-label="...">
           {{#if (can "add keyResultUpdate")}}
-            {{#link-to 'addKeyResultUpdate' session.organisation kr.quarter.id kr.id class="btn btn-default btnAction" tagname="button" data-toggle="tooltip" title="Add Key Result Update"}}<span class="glyphicon glyphicon-arrow-up"> </span>{{/link-to}}
+            {{#link-to 'addKeyResultUpdate' session.organisation kr.quarter.id kr.id (query-params referrer="key-results") class="btn btn-default btnAction" tagname="button" data-toggle="tooltip" title="Add Key Result Update"}}<span class="glyphicon glyphicon-arrow-up"> </span>{{/link-to}}
           {{/if}}
           {{#if (can "edit keyResult")}}
-            {{#link-to 'keyResult' session.organisation kr.quarter.id kr.id (query-params edit="1") class="btn btn-default btnAction" tagname="button" data-toggle="tooltip" title="Edit Key Result"}}<span class="glyphicon glyphicon-edit"> </span>{{/link-to}}
+            {{#link-to 'keyResult' session.organisation kr.quarter.id kr.id (query-params edit="1" referrer="key-results") class="btn btn-default btnAction" tagname="button" data-toggle="tooltip" title="Edit Key Result"}}<span class="glyphicon glyphicon-edit"> </span>{{/link-to}}
           {{/if}}
         </div>
       </td>
-      {{#if showResponsible}}
-        <td>{{kr.objective.engResp}}</td>
-        <td>{{kr.objective.productResp}}</td>
-        <td>{{kr.objective.programmeManager}}</td>
-        <td>{{kr.objective.uxDesResp}}</td>
-        <td>{{kr.objective.uxResResp}}</td>
-        <td>{{kr.objective.biResp}}</td>
-      {{/if}}
     </tr>
     {{/each}}
   </tbody>
